Fix heading sizes, fix gap to the left of footer

--- a/src/main/content/_assets/css/blog.scss
+++ b/src/main/content/_assets/css/blog.scss
@@ -295,13 +295,14 @@
     footer {
         position: fixed;
         right: 0;
-        top: calc(100% - 94px);
-        left: 38.33333vw;
+        top: calc(100% - 69px);
+        left: 38.33333%;
         z-index: 1030;
         transition: top .3s;
-
+        padding-top: 0px;
+        background: #FFFFFF;
         &:hover {
-            top: calc(100% - 130px);
+            top: calc(100% - 105px);
         }
     }
 
@@ -325,7 +326,7 @@
         margin-right: 13vw !important;
     }
 
-    #footer_bottom_container {
-        background: #FFFFFF;
+    body {
+        overflow-x: hidden;
     }
 }
