--- a/src/main/content/_assets/css/post.scss
+++ b/src/main/content/_assets/css/post.scss
@@ -93,29 +93,59 @@
 #article_body p {
     margin-top: 20px;
     margin-bottom: 20px;
-    line-height: 26px;
+    line-height: 24px;
+}
+
+#article_body h1 {
+    font-size: 40px;
+    font-family: BunueloLight;
+    color: #24253A;
+    margin-top: 40px;
+    margin-bottom: 8px;
+    line-height: 50px;
 }
 
 #article_body h2 {
-    font-size: 20px;
-    color: #24253a;
+    font-size: 24px;
+    font-family: BunueloLight;
+    color: #24253A;
     margin-top: 24px;
     margin-bottom: 8px;
+    line-height: 30px;
 }
 
 #article_body h3 {
-    font-size: 18px;
-    color: #24253a;
-    font-weight: 500;
+    font-size: 20px;
+    font-family: Asap;
+    color: #24253A;
     margin-top: 20px;
     margin-bottom: 8px;
+    line-height: 24px;
 }
 
 #article_body h4 {
-    font-size: 16px;
-    color: #6f7878;
-    font-weight: 500;
-    margin-top: 20px;
+    font-size: 14px;
+    font-family: Asap;
+    color: #24253A;
+    margin-top: 14px;
+    margin-bottom: 8px;
+    line-height: 18px;
+}
+
+#article_body h5 {
+    font-size: 11px;
+    font-family: Asap;
+    color: #24253A;
+    margin-top: 11px;
+    margin-bottom: 8px;
+    line-height: 12px;
+}
+
+#article_body h6 {
+    font-size: 10px;
+    font-family: Asap;
+    color: #24253A;
+    margin-top: 10px;
     margin-bottom: 8px;
 }
 
